# qarax

./: .env.sample  .gitignore  Cargo.toml  Dockerfile.node  README.md  Rocket.toml  ansible.cfg  api_client.patch  build.rs  firecracker  jailer  openapi-config.yaml  qarax.yaml  qarax.yml  run_tests.sh  sqlx-data.json
.github/workflows/: rust-ci.yml
.sqlx/: query-1a3d4a684c53ec9d75a78ca4f10b3e1f47d09abe0791a64da052087b6b2e2dc0.json  query-2169951d946e527c5d97893b543e34ff08adbdd5942bcdbfcd91ea18fb4dda62.json  query-4efae6a3592e9afed7ac7e735009a55a5f9d6befd78806f93ab9379e577ae39b.json  query-5ed3014ae4941944d82db216db4b65e045c2c90f1b974fdf11190151bcc6ef8f.json  query-7553ece01d231a946caeaa9503a48faeca840db114c793b0c19fcc658de0d7a5.json  query-c793b10195ee37947a35b8e3c0ec0e08d978cabd366c6881c4e62af3e7a42714.json
common/: Cargo.toml
common/src/: lib.rs  telemtry.rs
configuration/: base.yaml  local.yaml  production.yaml
contrib/scripts/: create_test_vm.sh  start_vm.sh
docs/: DEVELOPMENT.md  overview.md
e2e/: .gitignore  __init__.py  conftest.py  e2e.py  requirements.txt  run_tests.sh  terraform.py  util.py
e2e/terraform/: cloud_init.cfg  main.tf
migrations/: 20210424082738_hosts.sql  20210729130302_storage.sql  20210729130303_volumes.sql  20210729130458_kernels.sql  20210729130615_drives.sql  20210729131156_vms.sql  20210802103620_vm_drives_map.sql  20220402155415_networks.sql  20230422082504_vms.sql  20230430120819_storage.sql  20240216122106_networks.sql  20240330120537_hosts.sql  20240330120647_vms.sql  20240330124343_network.sql
migrations/2020-06-06-140540_create_hosts/: down.sql  up.sql
migrations/2020-06-22-163236_create_vms/: down.sql  up.sql
migrations/2020-08-12-081255_create_storage_table/: down.sql  up.sql
migrations/2020-08-12-081857_create_drives_table/: down.sql  up.sql
migrations/2020-08-12-082436_create_kernels_table/: down.sql  up.sql
migrations/2020-08-12-084427_create_vm_drives_table/: down.sql  up.sql
migrations/2020-08-12-100902_change_vms_kernel_to_foreign_key/: down.sql  up.sql
migrations/2020-08-12-102750_remove_root_fs_field/: down.sql  up.sql
playbooks/: requirements.yml
playbooks/roles/setup_host/: activate_playbook.yml  playbook.yml  vars
playbooks/roles/start_vm/files/: start_fc.sh
proto/: node.proto
python-sdk/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
python-sdk/.openapi-generator/: FILES
python-sdk/docs/: AttachDrive.md  Drive.md  DrivesApi.md  Error.md  HealthResponse.md  Host.md  HostsApi.md  InstallHost.md  Kernel.md  KernelsApi.md  PostResponse.md  Storage.md  StorageApi.md  VMsApi.md  Vm.md
python-sdk/qarax/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python-sdk/qarax/api/: __init__.py  drives_api.py  hosts_api.py  kernels_api.py  storage_api.py  v_ms_api.py
python-sdk/qarax/models/: __init__.py  attach_drive.py  drive.py  error.py  health_response.py  host.py  install_host.py  kernel.py  post_response.py  storage.py  vm.py
python-sdk/swagger_client/: __init__.py  api_client.py  configuration.py
python-sdk/swagger_client/api/: __init__.py  drives_api.py  hosts_api.py  kernels_api.py  storage_api.py  v_ms_api.py
python-sdk/swagger_client/models/: __init__.py
python-sdk/test/: test_attach_drive.py  test_drive.py  test_drives_api.py  test_error.py  test_health_response.py  test_host.py  test_hosts_api.py  test_install_host.py  test_kernel.py  test_kernels_api.py  test_post_response.py  test_storage.py  test_storage_api.py  test_v_ms_api.py  test_vm.py
qarax/: Cargo.toml  build.rs
qarax-node/: Cargo.toml  build.rs  firecracker
qarax-node/firecracker_rust_sdk/: Cargo.toml
qarax-node/firecracker_rust_sdk/src/: lib.rs
qarax-node/firecracker_rust_sdk/src/http/: client.rs  mod.rs
qarax-node/firecracker_rust_sdk/src/models/: balloon.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  cpu_template.rs  drive.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  logger.rs  machine.rs  machine_configuration.rs  metrics.rs  mmds_config.rs  mod.rs  network_interface.rs  partial_drive.rs  partial_network_interface.rs  rate_limiter.rs  snapshot_create_params.rs  snapshot_load_params.rs  token_bucket.rs  vm.rs  vsock.rs
qarax-node/proto/: node.proto
qarax-node/src/: lib.rs  main.rs  network.rs  server.rs  startup.rs  vm_service.rs  vmm_handler.rs
qarax-node/src/network/: dhcp.rs  mod.rs
qarax-node/src/rpc/: mod.rs
qarax-node/src/services/vm/: firecracker.rs  mod.rs  service.rs
qarax-node/src/storage/: download.rs  handler.rs  mod.rs  storage_handler.rs
qarax-node/src/vm/: mod.rs  vm_handler.rs  vmm_service.rs
qarax-node/tests/: vms.rs
qarax/playbooks/: requirements.yaml
qarax/playbooks/roles/: playbook.yaml
qarax/playbooks/roles/tasks/: firecracker.yaml  prologue.yaml
qarax/playbooks/roles/tasks/files/: setup_bridge.sh
qarax/src/: ansible.rs  configuration.rs  database.rs  errors.rs  lib.rs  main.rs  startup.rs
qarax/src/handlers/: mod.rs
qarax/src/handlers/host/: handler.rs  mod.rs
qarax/src/handlers/vm/: handler.rs
qarax/src/model/: hosts.rs  mod.rs  storage.rs  vms.rs
qarax/tests/: hosts.rs
scripts/: create_db.sh  start_db.sh
scripts/psql/: kb-postgres.yaml
src/: common.rs  database.rs  env.rs  lib.rs  main.rs  schema.rs  telemetry.rs
src/controllers/: drives.rs  hosts.rs  kernels.rs  mod.rs  storage.rs  vms.rs
src/handlers/: ansible.rs  drives.rs  hosts.rs  kernels.rs  mod.rs  networks.rs  storage.rs  vms.rs  volumes.rs
src/handlers/models/: hosts.rs  storage.rs  vms.rs
src/handlers/rpc/: client.rs  mod.rs
src/handlers/storage/: handler.rs  local_storage.rs  mod.rs  storage.rs
src/models/: drive.rs  drives.rs  host.rs  hosts.rs  kernel.rs  kernels.rs  mod.rs  networks.rs  storage.rs  vm.rs  vms.rs  volumes.rs
src/services/: drive.rs  host.rs  kernel.rs  mod.rs  storage.rs  vm.rs
src/services/rpc/: client.rs
src/services/util/: ansible.rs  mod.rs
tests/: hosts.rs
tests/scripts/: create_test_vm.sh  start_vm.sh
(+11 files in other folders)
