[package]
name = "qarax"
version = "0.1.0"
authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
sqlx = { version = "0.5.11", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "migrate",
    "macros",
    "offline",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.54"
thiserror = "1.0.30"
tracing = { version = "0.1.31", features = ["log"] }
dotenv = "0.15.0"
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.17.0", features = ["full"] }
hyper = { version = "0.14.17", features = ["full"] }
tower = "0.4.12"
http = "0.2.6"
tower-http = { version = "0.2.3", features = ["trace", "cors", "request-id"] }
tonic = "0.6.2"
prost = "0.9.0"
clap = "3.1.0"
tonic-health = "0.5.0"
common = { path = "common"}
lazy_static = "1.4.0"
regex = "1.5.4"
[build-dependencies]
tonic-build = "0.6.2"

[workspace]
default-members = [".", "qarax-node", "common"]
members = [".", "qarax-node", "common"]
