[package]
name = "qarax"
version = "0.1.0"
authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
sqlx = { git = "https://github.com/launchbadge/sqlx", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "migrate",
    "macros",
    "offline",
    "mac_address",
    "ipnetwork",
] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.57"
thiserror = "1.0.31"
tracing = { version = "0.1.34", features = ["log"] }
dotenv = "0.15.0"
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1.18.2", features = ["full"] }
hyper = { version = "0.14.18", features = ["full"] }
tower = "0.4.12"
http = "0.2.7"
tower-http = { version = "0.3.3", features = ["trace", "cors", "request-id"] }
tonic = "0.7.2"
prost = "0.10.3"
clap = "3.1.18"
tonic-health = "0.6.0"
common = { path = "common" }
lazy_static = "1.4.0"
regex = "1.5.5"
async-trait = "0.1.53"
reqwest = { version = "0.11.10", features = [
    "gzip",
    "json",
    "rustls-tls",
], default-features = false }
url = { version = "2.2.2", features = ["serde"] }
mac_address = { version = "1.1.3", features = ["serde"] }
ipnetwork = { version = "0.19.0", features = ["serde"] }

[build-dependencies]
tonic-build = "0.7.2"

[workspace]
default-members = [".", "qarax-node", "common"]
members = [".", "qarax-node", "common"]
