[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.31", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
    "registry",
] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"