[package]
name = "qarax-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
clap = { version = "3.1.5", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.6.2"
tracing = { version = "0.1.31", features = ["log"] }
prost = "0.9.0"
tonic-health = "0.5.0"
firecracker_rust_sdk = { path = "./firecracker_rust_sdk" }
nix = "0.23.1"
anyhow = "1.0.55"
serde = "1.0.136"
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "qarax-node"
path = "src/main.rs"
