[package]
name = "qarax-node"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "qarax-node"
path = "src/main.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full"] }
tonic-health = "0.10.2"
common = { path = "../common" }
clap = { version = "4.4.8", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tonic = "0.10.2"
firec = { git = "https://github.com/bennyz/firec", branch = "add-cgroup-version-arg" }

# Leaving for now to debug stuff
#firec = { path = "/home/benny/development/rust/firec" }

anyhow = "1.0.75"
uuid = { version = "1.6.1", features = ["v4"] }
reqwest = { version = "0.11.22", features = ["json"] }
openssl = { version = "0.10.60", features = ["vendored"] }

[dev-dependencies]
tokio-stream = { version = "0.1.14", features = ["net"] }
once_cell = "1.18.0"
