[package]
name = "firecracker_rust_sdk"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors", "Benny Zlotnik"]
edition = "2018"


[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
url = "2.2.2"
serde_yaml = "0.8.21"
base64 = "0.13.0"
futures = "0.3.17"
hyper = "0.14.13"
hyperlocal = "0.8.0"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
tracing-appender = "0.1.2"
anyhow = "1.0.44"
thiserror = "1.0.29"
nix = "0.23.0"

[dev-dependencies]
tokio-core = "0.1.18"
