[package]
name = "firecracker_rust_sdk"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors", "Benny Zlotnik"]
edition = "2018"


[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
url = "2.2.2"
serde_yaml = "0.8.21"
base64 = "0.13.0"
futures = "0.3.18"
hyper = "0.14.15"
hyperlocal = "0.8.0"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tracing-appender = "0.2.0"
anyhow = "1.0.51"
thiserror = "1.0.30"
nix = "0.23.0"

[dev-dependencies]
tokio-core = "0.1.18"
