[package]
name = "firecracker_rust_sdk"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors", "Benny Zlotnik"]
edition = "2021"


[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
url = "2.2.2"
serde_yaml = "0.8.23"
base64 = "0.13.0"
futures = "0.3.21"
hyper = "0.14.17"
hyperlocal = "0.8.0"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
tracing-appender = "0.2.0"
anyhow = "1.0.53"
thiserror = "1.0.30"
nix = "0.23.1"

[dev-dependencies]
tokio-core = "0.1.18"
